# Abstract

./: .gitignore  CMakeLists.txt  Makefile  run_tests.sh
inc/: Error.hh  IOperand.hh  Instructions.hh  Int8.hh  Operand.hh
srcs/: Error.cpp  IOperand.cpp  IOperand.hh  Instructions.cpp  Int8.cpp  Int8.hh  Operand.cpp  main.cpp
